feat: Implement user reminders, repository notes, and repository scoring features.

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
     rel="stylesheet">
 
-  <title>1 Day 1 Commit - Build Habits That Compound</title>
+  <title>1 Day 1 Commit</title>
 </head>
 
 <body>
