feat: Add SEO meta tags and OG image

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,38 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/webp" href="/commit.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>1Day1Commit - Build Your Daily GitHub Streak</title>
   <meta name="description"
+    content="Build consistent coding habits with daily GitHub commits. Track your streak, get smart reminders, and never break the chain. Free for developers." />
+  <meta name="keywords"
+    content="GitHub, commit streak, developer tools, coding habits, productivity, daily commits, GitHub tracker, streak tracker" />
+  <meta name="author" content="1Day1Commit" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://1day1commit.netlify.app" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://1day1commit.netlify.app" />
+  <meta property="og:title" content="1Day1Commit - Build Your Daily GitHub Streak" />
+  <meta property="og:description"
     content="Build consistent coding habits with daily GitHub commits. Track your streak, get smart reminders, and never break the chain." />
+  <meta property="og:image" content="https://1day1commit.netlify.app/og-image.png" />
+  <meta property="og:site_name" content="1Day1Commit" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://1day1commit.netlify.app" />
+  <meta name="twitter:title" content="1Day1Commit - Build Your Daily GitHub Streak" />
+  <meta name="twitter:description"
+    content="Build consistent coding habits with daily GitHub commits. Track your streak, get smart reminders, and never break the chain." />
+  <meta name="twitter:image" content="https://1day1commit.netlify.app/og-image.png" />
+
+  <!-- Theme -->
   <meta name="theme-color" content="#0a0a0b" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +44,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
     rel="stylesheet">
-
-  <title>1 Day 1 Commit</title>
 </head>
 
 <body>
